# flowtask

./: .gitignore  README.md  pyproject.toml  tasks.json
.github/workflows/: ci.yml
flowtask/: cli.py  config.py  db.py  graph.py  models.py
tests/: test_db.py  test_graph.py
